force-app/main/default/objects/Program_Enrollment_Criteria__c.object
<CustomObject>
    <description>Stores all the criteria records tied to a Program Enrollment and stores the current result (true or false) of that criteria.</description>
    <fields>
        <fullName>Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Criteria</label>
        <referenceTo>Criteria__c</referenceTo>
        <relationshipLabel>Program Enrollment Criteria</relationshipLabel>
        <relationshipName>Program_Enrollment_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Most_Recent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Most Recent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <description>The PE this criteria is tied to.</description>
        <label>Program Enrollment</label>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>Program Enrollment Criteria</relationshipLabel>
        <relationshipName>Program_Enrollment_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QuestionGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Group</label>
        <referenceTo>Enrollment_Component__c</referenceTo>
        <relationshipLabel>Program Enrollment Criteria</relationshipLabel>
        <relationshipName>Program_Enrollment_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Group__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Question Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The current result of this criteria.</description>
        <label>Result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SchoolYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School Year</label>
        <referenceTo>School_Year__c</referenceTo>
        <relationshipLabel>Program Enrollment Criteria</relationshipLabel>
        <relationshipName>Program_Enrollment_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School_Year__c</fullName>
        <description>Within the enrollment model, some objects are a one to many off of the Program Enrollment.  For example, ASI (Annual Student Information).  In those cases, we need to know which Criteria record need recalculating. This field will store the school year that this criteria is related to.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>School Year</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_or_Household__c</fullName>
        <description>Within the data model for an enrollment, some objects are used twice, once for the student and once for the caretaker.  When an update occurs to one of those multi use objects, we need to know which criteria may be impacted.  The data in this field acts like a filter criteria to only recalculate Criteria based on where the update happened.</description>
        <label>Student or Household</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Household</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Program Enrollment Criteria</label>
    <nameField>
        <displayFormat>PEC-{000000}</displayFormat>
        <label>Program Enrollment Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Enrollment Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>